# lab

./: .dockerignore  .editorconfig  .env.template  .gitignore  Makefile  README.md  TODO.md  docker-compose.yml  issues-lock.json  skills-lock.json
.agents/skills/: dataviz
.claude/: CLAUDE.md
.claude/skills/: implement-it  plan-it  review-it
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
compose/: base.yml  llm.yml  management.yml  modeling.yml  observability.yml  orchestration.yml  quality.yml  sso.yml  storage.yml  tests.yml
docs/adrs/: 001-test-dependency-supply-chain-protection.md
scripts/: generate_oidc_key.sh  run_glue_ingestion.sh  setup_hosts.sh  setup_portainer_oauth.sh
services/airflow/: Dockerfile  webserver_config.py
services/alloy/: config.alloy
services/authelia/: configuration.yml  users_database.yml
services/caddy/: Caddyfile
services/grafana/: grafana_dashboards.yaml  grafana_datasources.yaml
services/homepage/: services.yaml  settings.yaml
services/jupyter/: Dockerfile  entrypoint.sh  jupyter_notebook_config.json  jupyter_notebook_config.py  overrides.json  (+1 more)
tests/: Dockerfile  pyproject.toml
tests/e2e/: conftest.py  test_airflow.py  test_authelia.py  test_grafana.py  test_homepage.py  test_mlflow.py
tests/e2e/features/: airflow.feature  authelia.feature  grafana.feature  homepage.feature  mlflow.feature
tests/e2e/steps/: airflow_steps.py  authelia_steps.py  grafana_steps.py  homepage_steps.py  mlflow_steps.py
tests/integration/: conftest.py  test_lab_net.py  test_observability.py  test_orchestration.py  test_quality.py  test_sso.py  test_storage.py
tests/integration/features/: lab_net.feature  observability.feature  orchestration.feature  quality.feature  sso.feature  storage.feature
tests/integration/steps/: observability_steps.py  orchestration_steps.py  quality_steps.py  sso_steps.py  storage_steps.py
tests/security/: test_no_secret_envs.py
tests/smoke/: test_image_build.py
(+59 files in other folders)
